# aoc-2023-py

./: README.md  pyproject.toml
1/: part1.py  part2.py
10/: combined.py
11/: combined.py
13/: combined.py
14/: combined.py
15/: combined.py
16/: combined.py
17/: combined.py
18/: combined.py
19/: combined.py
2/: part1.py  part2.py
20/: combined.py
3/: part1.py  part2.py
4/: part1.py  part2.py
5/: part1.py  part2.py
6/: part1.py  part2.py
7/: part1.py  part2.py
8/: combined.py  part1.py
9/: combined.py
common/: vec.py
