[tool.poetry]
name = "aoc-2023-py"
version = "0.1.0"
description = "Advent of Code 2023 solutions"
authors = ["Alexander Siol <alex+aoc2023py@hackthehell.de>"]
readme = "README.md"
packages = [{include = "aoc_2023_py"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
